--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="barra">
                 <div class="logo">
                     <h1 class="nombre-sitio">
-                        Arquitectura <span>Bosque</span>
+                        Arquitectura<span>Bosque</span>
                     </h1>
                 </div>
 
@@ -39,5 +39,27 @@
             </div>
         </div>
     </header>
+
+
+    <section class="contenedor mt-5 nosotros">
+        <div class="contenido-nosotros">
+            <h2>Sobre Nosotros</h2>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Eum possimus dolorem ullam asperiores sunt! Provident enim, 
+                dicta, debitis impedit laboriosam eligendi corporis sit ut sapiente
+                soluta id, voluptas nesciunt dolor.
+            </p>
+
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Eum possimus dolorem ullam asperiores sunt! Provident enim, 
+                dicta, debitis impedit laboriosam eligendi corporis sit ut sapiente
+                soluta id, voluptas nesciunt dolor.
+            </p>
+        </div>
+    </section>
+
+
 </body>
 </html>
