FT: estilos a sobre nosotros

--- a/index.html
+++ b/index.html
@@ -40,25 +40,21 @@
         </div>
     </header>
 
-
     <section class="contenedor mt-5 nosotros">
         <div class="contenido-nosotros">
             <h2>Sobre Nosotros</h2>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Eum possimus dolorem ullam asperiores sunt! Provident enim, 
-                dicta, debitis impedit laboriosam eligendi corporis sit ut sapiente
-                soluta id, voluptas nesciunt dolor.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Fuga tenetur, reprehenderit eius quos temporibus harum impedit at! Ipsum quo ea tenetur, voluptatibus, nemo,
+                 recusandae ad dolorem porro consequatur ullam neque?
             </p>
-
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Eum possimus dolorem ullam asperiores sunt! Provident enim, 
-                dicta, debitis impedit laboriosam eligendi corporis sit ut sapiente
-                soluta id, voluptas nesciunt dolor.
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Tempore nihil, harum culpa ut laudantium ullam suscipit sapiente rem dignissimos consequuntur aliquam.
+             Maxime sed rerum quasi sint in minima esse nam.</p>
         </div>
     </section>
+
+    
 
 
 </body>
