--- a/index.html
+++ b/index.html
@@ -125,6 +125,31 @@
         </div>
     </section>
 
+    <footer class="footer mt-5">
+        <div class="contenedor">
+            <div class="barra">
+                <div class="logo">
+                    <h1 class="nombre-sitio">
+                        Arquitectura<span>Bosque</span>
+                    </h1>
+                </div>
+
+                <div class="contacto">
+                    <a class="telefono" href="tel:01-000-0000-000">01-000-0000-000</a>
+
+                    <nav class="navegacion">
+                        <a class="link" href="#">Inicio</a>
+                        <a class="link" href="#">Nosotros</a>
+                        <a class="link" href="#">Modelos</a>
+                        <a class="link" href="#">Galeria</a>
+                        <a class="link" href="#">Contacto</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+
+        <p class="copyrigth">Todos los derechos reservados &copy;</p>
+    </footer>
 
 </body>
 </html>
